# translator

./: LICENSE  Main.hs  MainGTK.hs  README.md  Translator.hs  janela.glade  stack.yaml  translator.cabal
app/: MainGTK.hs
src/: Translator.hs
