name:                translator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/translator#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-files: janela.glade

library
  hs-source-dirs:      src
  exposed-modules:     Translator
  build-depends:       base >= 4.7 && < 5
                    ,  text
                    ,  either
                    ,  ListZipper
                    ,  pdf-toolbox-document
  default-language:    Haskell2010

executable translator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , translator
  default-language:    Haskell2010

executable translatorGTK
  hs-source-dirs:      app
  main-is:             MainGTK.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , ListZipper
                     , gtk3
                     , translator
  default-language:    Haskell2010


test-suite translator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , translator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/translator
